# asset-management-api

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 971f903129cb_initial_migration.py
app/: auth.py  cache.py  config.py  database.py  main.py
app/api/routes/: assets.py  auth.py
app/crud/: __init__.py  assets.py  users.py
app/models/: asset.py  user.py
app/schemas/: __init__.py  asset.py  user.py
app/services/: ai.py  email.py
tests/: conftest.py  test_ai_image.py  test_assets.py  test_auth.py  test_cache.py
